syntax = "proto3";

option csharp_namespace = "HubEdgeProxyModule";

package hubedgeproxycommand;

// The greeting service definition.
service Command {
  // Sends TelemetryData to IOT Edge
  rpc ReceiveCommand (CommandServiceRequest) returns (CommandServiceResponse);
}

// The request message containing the user's name.
message CommandServiceRequest {
	string CommandName = 1;
	string Payload = 2;
}

// The response message containing the greetings.
message CommandServiceResponse {
  int32 Code = 1;
  string Message = 2;
}